# tuner

./: Cargo.toml  README.md
.plans/: 01-architecture.md  02-smoother-tuning.md
crates/tuner-app/: Cargo.toml
crates/tuner-app/src/: audio.rs  main.rs
crates/tuner-cli/: Cargo.toml
crates/tuner-cli/src/: live.rs  main.rs  wav.rs
crates/tuner-core/: Cargo.toml
crates/tuner-core/src/: lib.rs  mpm.rs  note.rs  nsdf.rs
crates/tuner-engine/: Cargo.toml
crates/tuner-engine/src/: lib.rs  ring.rs  smoother.rs  tuning.rs
crates/tuner-engine/tests/: samples.rs
