[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zzmrl/audiotools"
rust-version = "1.85"

[workspace.dependencies]
realfft = "3.5"
hound = "3.5"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
cpal = "0.17"
triple_buffer = "8.1"

[profile.release]
lto = "thin"
codegen-units = 1
