[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zzmrl/audiotools"
rust-version = "1.92"

[workspace.dependencies]
tuner-core = { "version" = "0.1.0", path = "crates/tuner-core", default-features = false }
tuner-engine = { "version" = "0.1.0", path = "crates/tuner-engine", default-features = false }
tuner-cli = { "version" = "0.1.0", path = "crates/tuner-cli", default-features = false }
tuner-app = { "version" = "0.1.0", path = "crates/tuner-app", default-features = false }

realfft = "3.5"
hound = "3.5"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
cpal = "0.17"
triple_buffer = "9.0"
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.34"

[profile.release]
lto = "thin"
codegen-units = 1
