[package]
name = "tuner-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "egui-based GUI tuner. Mic input via cpal, DSP via tuner-engine."

[dependencies]
tuner-core.workspace = true
tuner-engine.workspace = true

cpal.workspace = true
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
