[package]
name = "tuner-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Validation CLI for tuner-core: analyse WAV files or live mic input."

[dependencies]
tuner-core = { path = "../tuner-core" }
hound.workspace = true
clap.workspace = true
anyhow.workspace = true
cpal.workspace = true
