[package]
name = "tuner-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Host-agnostic tuner engine: ring buffer, smoothing, lock-free pitch publishing."

[dependencies]
tuner-core.workspace = true

triple_buffer.workspace = true

[dev-dependencies]
hound.workspace = true
